// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check matches snapshot 1`] = `
<DocumentFragment>
  <fieldset
    aria-required="true"
    class="grid-gap grid-row usa-fieldset"
    id="id-fieldset"
  >
    <legend
      id="fieldset-legend-id-fieldset"
    >
      <span
        class="usa-sr-only"
      >
        choice
      </span>
    </legend>
    <div
      class="grid-gap margin-top-3 grid-row flex-align-start"
    >
      <div
        class=""
      >
        <div
          class="usa-checkbox"
        >
          <input
            class="usa-checkbox__input"
            id="id-1"
            name=""
            type="checkbox"
            value="1"
          />
          <label
            class="usa-checkbox__label"
            for="id-1"
          >
            Option 1
          </label>
        </div>
        <div
          class="usa-checkbox"
        >
          <input
            class="usa-checkbox__input"
            id="id-2"
            name=""
            type="checkbox"
            value="2"
          />
          <label
            class="usa-checkbox__label"
            for="id-2"
          >
            Option 2
          </label>
        </div>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`radio matches snapshot 1`] = `
<DocumentFragment>
  <fieldset
    aria-required="true"
    class="grid-gap grid-row usa-fieldset"
    id="id-fieldset"
  >
    <legend
      id="fieldset-legend-id-fieldset"
    >
      <span
        class="usa-sr-only"
      >
        choice
      </span>
    </legend>
    <div
      class="grid-gap margin-top-3 grid-row flex-align-start"
    >
      <div
        class=""
      >
        <div
          class="usa-radio"
        >
          <input
            class="usa-radio__input"
            id="1"
            name=""
            type="radio"
            value="1"
          />
          <label
            class="usa-radio__label"
            for="1"
          >
            Option 1
          </label>
        </div>
        <div
          class="usa-radio"
        >
          <input
            class="usa-radio__input"
            id="2"
            name=""
            type="radio"
            value="2"
          />
          <label
            class="usa-radio__label"
            for="2"
          >
            Option 2
          </label>
        </div>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`radio with expansion matches snapshot 1`] = `
<DocumentFragment>
  <fieldset
    aria-required="true"
    class="grid-gap grid-row usa-fieldset"
    id="id-fieldset"
  >
    <legend
      id="fieldset-legend-id-fieldset"
    >
      <span
        class="usa-sr-only"
      >
        choice
      </span>
    </legend>
    <div
      class="grid-gap margin-top-3 grid-row flex-align-start"
    >
      <div
        class=""
      >
        <div
          class="usa-radio"
        >
          <input
            checked=""
            class="usa-radio__input"
            expansion="[object Object]"
            id="1"
            name=""
            type="radio"
            value="1"
          />
          <label
            class="usa-radio__label"
            for="1"
          >
            Option 1
          </label>
        </div>
        <div
          class="oec-choicelist-expansion"
        >
          <p>
            My expansion
          </p>
        </div>
        <div
          class="usa-radio"
        >
          <input
            class="usa-radio__input"
            id="2"
            name=""
            type="radio"
            value="2"
          />
          <label
            class="usa-radio__label"
            for="2"
          >
            Option 2
          </label>
        </div>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`select matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="usa-form-group "
  >
    <div
      class=""
    />
    <label
      class="usa-label"
      for="id"
    >
      choice
    </label>
    <select
      aria-required="true"
      class="usa-select"
      id="id"
      name=""
    >
      <option
        value=""
      >
        - Select -
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
    </select>
  </div>
</DocumentFragment>
`;

exports[`select with expansion matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="usa-form-group "
  >
    <div
      class=""
    />
    <label
      class="usa-label"
      for="id"
    >
      choice
    </label>
    <select
      aria-required="true"
      class="usa-select"
      id="id"
      name=""
    >
      <option
        value=""
      >
        - Select -
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
    </select>
    <div
      class="oec-choicelist-expansion"
    >
      <p>
        My expansion
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`select with expansion matches snapshot 2`] = `
<DocumentFragment>
  <fieldset
    aria-required="true"
    class="grid-gap grid-row usa-fieldset"
    id="id-fieldset"
  >
    <legend
      id="fieldset-legend-id-fieldset"
    >
      <span
        class="usa-sr-only"
      >
        choice
      </span>
    </legend>
    <div
      class="grid-gap margin-top-3 grid-row flex-align-start"
    >
      <div
        class=""
      >
        <div
          class="usa-checkbox"
        >
          <input
            checked=""
            class="usa-checkbox__input"
            id="id-1"
            name=""
            type="checkbox"
            value="1"
          />
          <label
            class="usa-checkbox__label"
            for="id-1"
          >
            Option 1
          </label>
        </div>
        <div
          class="oec-choicelist-expansion"
        >
          <p>
            My expansion
          </p>
        </div>
        <div
          class="usa-checkbox"
        >
          <input
            class="usa-checkbox__input"
            id="id-2"
            name=""
            type="checkbox"
            value="2"
          />
          <label
            class="usa-checkbox__label"
            for="id-2"
          >
            Option 2
          </label>
        </div>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;
